--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
-Ôªø<!DOCTYPE html><html lang="es"><head>
+<!DOCTYPE html><html lang="es"><head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Calendario de Reservas</title>
 <style>
     body {
         font-family: Arial, sans-serif;
-        background-image: url('sala1.jpg'); & vbCrLf/* Ruta de la imagen de fondo */        background-size: cover; & vbCrLf /* Ajusta el tama√±o de la imagen para cubrir toda la pantalla */         background-position: center; & vbCrLf /* Centra la imagen */         background-repeat: no-repeat; & vbCrLf /* Evita que la imagen se repita */        background-color:  #d8eaef;
+        background-image: url('sala1.jpg'); & vbCrLf/* Ruta de la imagen de fondo */        background-size: cover; & vbCrLf /* Ajusta el tamaÒo de la imagen para cubrir toda la pantalla */         background-position: center; & vbCrLf /* Centra la imagen */         background-repeat: no-repeat; & vbCrLf /* Evita que la imagen se repita */        background-color:  #d8eaef;
     }
     h2 {
         color:white;
       text-align:center;
      }
-.correo {    display: inline-block;    margin-left: 15px;    padding: 10px 20px;    background-color: #4CAF50; /* Color de fondo verde */    color: white; /* Color de texto blanco */    text-align: center;    text-decoration: none;    border: none;    cursor: pointer;    border-radius: 5px; /* Bordes redondeados */    transition: background-color 0.3s ease; /* Transici√≥n suave del color de fondo */}.correo:hover {    background-color: #45a049; /* Color de fondo verde m√°s oscuro al pasar el mouse */}.correo:active {    background-color: #3e8e41; /* Color de fondo verde m√°s oscuro cuando se hace clic */}    table {
+.correo {    display: inline-block;    margin-left: 15px;    padding: 10px 20px;    background-color: #4CAF50; /* Color de fondo verde */    color: white; /* Color de texto blanco */    text-align: center;    text-decoration: none;    border: none;    cursor: pointer;    border-radius: 5px; /* Bordes redondeados */    transition: background-color 0.3s ease; /* TransiciÛn suave del color de fondo */}.correo:hover {    background-color: #45a049; /* Color de fondo verde m·s oscuro al pasar el mouse */}.correo:active {    background-color: #3e8e41; /* Color de fondo verde m·s oscuro cuando se hace clic */}    table {
         border-collapse: collapse;
         margin-top: 50px;
         margin-left: auto;
@@ -19,48 +19,12 @@
     }    .vacio{
     background-color:#616a6b; }    th,td{
       border: 0.5px solid #dddddd;       text-align: center;        padding: 6px;    }    td.LIBRE{     font-size:10px;     Background-color:   #28b463;      color:white;                     height:10px                                        }    th.horario{
-    font-size: 12px; /* Tama√±o de la fuente */    Background-color: #616a6b; color:#fdfefe;      padding: 8px 8px;     font-weight: bold;            }    td.dia{    font-size: 14px; /* Tama√±o de la fuente */    font-weight: bold;     padding: 2px;    color:#fdfefe; width:15% ;    background-color: #616a6b; }    td{    font-size:10px; /* Tama√±o de la fuente */    color:black;                                    background-color: #b2babb;                                                                      }    }
-    th {        background-color:#b2babb;       padding:3px;    }</style></head><body><h2>Disponibilidad de Reservas Sala Ituzaing√≥ 2024</h2><a href='formulario.html' target='_blank' style='background-color: #4CAF50; color: white; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 14px; cursor: pointer; border-radius: 5px; font-weight: bold;'>Solicitar Agenda</a><table>    <thead>        <tr>            <th class="vacio"></th> <!-- Espacio vac√≠o para d√≠as --><th class="horario">09:00-09:30</th><th class="horario">09:30-10:00</th><th class="horario">10:00-10:30</th><th class="horario">10:30-11:00</th><th class="horario">11:00-11:30</th><th class="horario">11:30-12:00</th><th class="horario">12:00-12:30</th><th class="horario">12:30-13:00</th><th class="horario">13:00-13:30</th><th class="horario">13:30-14:00</th><th class="horario">14:00-14:30</th><th class="horario">14:30-15:00</th><th class="horario">15:00-15:30</th><th class="horario">15:30-16:00</th><th class="horario">16:00-16:30</th><th class="horario">16:30-17:00</th>        </tr>
+    font-size: 12px; /* TamaÒo de la fuente */    Background-color: #616a6b; color:#fdfefe;      padding: 8px 8px;     font-weight: bold;            }    td.dia{    font-size: 14px; /* TamaÒo de la fuente */    font-weight: bold;     padding: 2px;    color:#fdfefe; width:15% ;    background-color: #616a6b; }    td{    font-size:10px; /* TamaÒo de la fuente */    color:black;                                    background-color: #b2babb;                                                                      }    }
+    th {        background-color:#b2babb;       padding:3px;    }</style></head><body><h2>Disponibilidad de Reservas Sala ItuzaingÛ 2024</h2><a href='formulario.html' target='_blank' style='background-color: #4CAF50; color: white; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 14px; cursor: pointer; border-radius: 5px; font-weight: bold;'>Solicitar Agenda</a><table>    <thead>        <tr>            <th class="vacio"></th> <!-- Espacio vacÌo para dÌas --><th class="horario">09:00-09:30</th><th class="horario">09:30-10:00</th><th class="horario">10:00-10:30</th><th class="horario">10:30-11:00</th><th class="horario">11:00-11:30</th><th class="horario">11:30-12:00</th><th class="horario">12:00-12:30</th><th class="horario">12:30-13:00</th><th class="horario">13:00-13:30</th><th class="horario">13:30-14:00</th><th class="horario">14:00-14:30</th><th class="horario">14:30-15:00</th><th class="horario">15:00-15:30</th><th class="horario">15:30-16:00</th><th class="horario">16:00-16:30</th><th class="horario">16:30-17:00</th>        </tr>
     </thead>
     <tbody>
-        <!-- Filas para cada d√≠a del mes -->
+        <!-- Filas para cada dÌa del mes -->
         <tr>
-<td class="dia">mi√©rcoles 31 julio</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-</tr>
-<td class="dia">jueves 01 agosto</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-</tr>
 <td class="dia">viernes 02 agosto</td> 
 <td class=RESERVADA>RESERVADA</td> 
 <td class=RESERVADA>RESERVADA</td> 
@@ -80,22 +44,22 @@
 <td class=LIBRE>LIBRE</td>
 </tr>
 <td class="dia">lunes 05 agosto</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
 </tr>
 <td class="dia">martes 06 agosto</td> 
 <td class=LIBRE>LIBRE</td> 
@@ -115,7 +79,7 @@
 <td class=RESERVADA>RESERVADA</td>
 <td class=RESERVADA>RESERVADA</td>
 </tr>
-<td class="dia">mi√©rcoles 07 agosto</td> 
+<td class="dia">miÈrcoles 07 agosto</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
@@ -188,14 +152,14 @@
 <td class=LIBRE>LIBRE</td>
 </tr>
 <td class="dia">martes 13 agosto</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td>
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td>
 <td class=RESERVADA>RESERVADA</td>
 <td class=RESERVADA>RESERVADA</td>
 <td class=RESERVADA>RESERVADA</td>
@@ -205,7 +169,7 @@
 <td class=RESERVADA>RESERVADA</td>
 <td class=RESERVADA>RESERVADA</td>
 </tr>
-<td class="dia">mi√©rcoles 14 agosto</td> 
+<td class="dia">miÈrcoles 14 agosto</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
@@ -214,14 +178,14 @@
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
 </tr>
 <td class="dia">jueves 15 agosto</td> 
 <td class=LIBRE>LIBRE</td> 
@@ -295,7 +259,7 @@
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
 </tr>
-<td class="dia">mi√©rcoles 21 agosto</td> 
+<td class="dia">miÈrcoles 21 agosto</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
@@ -385,7 +349,7 @@
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
 </tr>
-<td class="dia">mi√©rcoles 28 agosto</td> 
+<td class="dia">miÈrcoles 28 agosto</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
@@ -475,7 +439,7 @@
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
 </tr>
-<td class="dia">mi√©rcoles 04 septiembre</td> 
+<td class="dia">miÈrcoles 04 septiembre</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
@@ -565,7 +529,43 @@
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
 </tr>
-<td class="dia">mi√©rcoles 11 septiembre</td> 
+<td class="dia">miÈrcoles 11 septiembre</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+</tr>
+<td class="dia">jueves 12 septiembre</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+</tr>
+<td class="dia">viernes 13 septiembre</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
