--- a/index.html
+++ b/index.html
@@ -25,51 +25,15 @@
     <tbody>
         <!-- Filas para cada día del mes -->
         <tr>
-<td class="dia">lunes 05 agosto</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-</tr>
-<td class="dia">martes 06 agosto</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-</tr>
 <td class="dia">miércoles 07 agosto</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td>
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td>
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
@@ -80,15 +44,15 @@
 <td class=LIBRE>LIBRE</td>
 </tr>
 <td class="dia">jueves 08 agosto</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
@@ -98,14 +62,14 @@
 <td class=LIBRE>LIBRE</td>
 </tr>
 <td class="dia">viernes 09 agosto</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td>
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td>
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
@@ -116,14 +80,14 @@
 <td class=LIBRE>LIBRE</td>
 </tr>
 <td class="dia">lunes 12 agosto</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td>
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td>
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
@@ -152,14 +116,14 @@
 <td class=RESERVADA>RESERVADA</td>
 </tr>
 <td class="dia">miércoles 14 agosto</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td>
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td>
 <td class=RESERVADA>RESERVADA</td>
 <td class=RESERVADA>RESERVADA</td>
 <td class=RESERVADA>RESERVADA</td>
@@ -170,14 +134,14 @@
 <td class=RESERVADA>RESERVADA</td>
 </tr>
 <td class="dia">jueves 15 agosto</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td>
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td>
 <td class=RESERVADA>RESERVADA</td>
 <td class=RESERVADA>RESERVADA</td>
 <td class=RESERVADA>RESERVADA</td>
@@ -206,22 +170,22 @@
 <td class=LIBRE>LIBRE</td>
 </tr>
 <td class="dia">lunes 19 agosto</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
 </tr>
 <td class="dia">martes 20 agosto</td> 
 <td class=LIBRE>LIBRE</td> 
@@ -566,6 +530,42 @@
 <td class=LIBRE>LIBRE</td>
 </tr>
 <td class="dia">lunes 16 septiembre</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+</tr>
+<td class="dia">martes 17 septiembre</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+</tr>
+<td class="dia">miércoles 18 septiembre</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
