--- a/formulario.html
+++ b/formulario.html
@@ -55,7 +55,7 @@ button:hover { background-color: #2e7d32; }
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 <script>
-var disabledDates = ["28/02/2024","29/02/2024","01/03/2024","04/03/2024","05/03/2024","07/03/2024","08/03/2024","11/03/2024","02/04/2024","03/04/2024","15/04/2024","09/05/2024","05/06/2024","12/06/2024","26/06/2024","16/07/2024","RESERVADA","22/07/2024","23/07/2024","24/07/2024","26/07/2024","30/07/2024","01/08/2024","02/08/2024","05/08/2024","06/08/2024","13/08/2024","14/08/2024","15/08/2024","19/08/2024"];
+var disabledDates = ["28/02/2024","29/02/2024","01/03/2024","04/03/2024","05/03/2024","07/03/2024","08/03/2024","11/03/2024","02/04/2024","03/04/2024","15/04/2024","09/05/2024","05/06/2024","12/06/2024","26/06/2024","16/07/2024","RESERVADA","22/07/2024","23/07/2024","24/07/2024","26/07/2024","30/07/2024","01/08/2024","02/08/2024","05/08/2024","06/08/2024","12/08/2024","13/08/2024","14/08/2024","15/08/2024","19/08/2024"];
 function mostrarCamposFechas() {
     var cantidadDias = parseInt(document.getElementById('cantidadDias').value);
     var container = document.getElementById('fechasContainer');
